# qmarkdowntextedit

./: .git-blame-ignore-revs  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  QMarkdownTextEdit.pro  README.md  appveyor.yml  devenv.nix  devenv.yaml  highlighter.cpp  highlighter.h  justfile  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markdownhighlighter.cpp  markdownhighlighter.h  media.qrc  qmarkdowntextedit-app.pro  qmarkdowntextedit-headers.pri  qmarkdowntextedit-lib.pro  qmarkdowntextedit-sources.pri  qmarkdowntextedit.cpp  qmarkdowntextedit.h  qmarkdowntextedit.pro  qownlanguagedata.cpp  qownlanguagedata.h  qplaintexteditsearchwidget.cpp  qplaintexteditsearchwidget.h  qplaintexteditsearchwidget.ui  qtexteditsearchwidget.cpp  qtexteditsearchwidget.h  qtexteditsearchwidget.ui  searchoptions.h  treefmt.toml
.github/: FUNDING.yml
.github/workflows/: build.yml
lib/peg-markdown-highlight/: LICENSE  README.md  pmh_definitions.h  pmh_grammar.leg  pmh_parser.c
scripts/: clang-format-project.sh
trans/: qmarkdowntextedit_de.qm  qmarkdowntextedit_de.ts
